--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       <link rel="stylesheet" href="./css/form_container.css">
       <link rel="stylesheet" href="./css/form.css">
       <link rel="stylesheet" href="./css/form_title.css">
+      <link rel="stylesheet" href="./css/form_social.css">
       <link rel="stylesheet" href="./css/social_icon.css">
+      <link rel="stylesheet" href="./css/form_input_container.css">
+      <link rel="stylesheet" href="./css/form_input.css">
+      <link rel="stylesheet" href="./css/form_button.css">
       <tittle>Login - Miguel</tittle>
 </head>
 <body>
@@ -36,7 +40,7 @@
                            </a> 
                        </div>
                        <p class="form_text">ou utilize sua conta</p>
-                       <div class="form_inputs">
+                       <div class="form_input_container">
                             <input type="email" class="form_input" placeholder="Email">
                             <input type="password" class="form_input" placeholder="Password">
                        </div>
